--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/gato-icono.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Nat</title>
+    <script
+    src="https://kit.fontawesome.com/81d73e8e4d.js"
+    crossorigin="anonymous"
+  ></script>
   </head>
   <body>
     <div id="root"></div>
