--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/gato-icono.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Gc2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Nat</title>
+    <title>Giselle Cifuentes</title>
     <script
     src="https://kit.fontawesome.com/81d73e8e4d.js"
     crossorigin="anonymous"
   ></script>
   </head>
   <body>
+
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
